fix(main): fix vulnerabilities and overflow

--- a/entities/atoms/Flurry/Flurry.module.css
+++ b/entities/atoms/Flurry/Flurry.module.css
@@ -53,6 +53,7 @@
 }
 
 .silhouette {
+  height: auto;
   left: 50%;
   max-height: 100%;
   max-width: 100%;
@@ -61,4 +62,5 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
+  width: auto;
 }
