--- a/entities/organisms/Timeline/TimelineElement/TimelineElement.module.css
+++ b/entities/organisms/Timeline/TimelineElement/TimelineElement.module.css
@@ -1,4 +1,5 @@
 .logo {
+  height: auto;
   left: 50%;
   max-height: 75%;
   max-width: 75%;
@@ -6,4 +7,5 @@
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
+  width: auto;
 }
